fix: reports sub menu deducted on dashboard container overflow hidden.

--- a/assets/src/less/dashboard.less
+++ b/assets/src/less/dashboard.less
@@ -36,7 +36,6 @@ div.media-sidebar a.edit-attachment{
         flex-wrap: wrap;
         -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
-        overflow: hidden;
         width: 100%;
 
         * {
